--- a/boot/boot.vcxproj
+++ b/boot/boot.vcxproj
@@ -243,7 +243,9 @@ del $(ProjectDir)$(Platform)\$(Configuration)\bootloader.obj</Command>
     <ClCompile Include="TeletypeVideoBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="stdtype.hpp" />
     <ClInclude Include="TeletypeVideoBuffer.hpp" />
+    <ClInclude Include="varg.hpp" />
   </ItemGroup>
   <ItemGroup>
     <FASM Include="bootloader.asm">
