--- a/boot/boot.vcxproj.filters
+++ b/boot/boot.vcxproj.filters
@@ -32,6 +32,12 @@
     <ClInclude Include="TeletypeVideoBuffer.hpp">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="varg.hpp">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="stdtype.hpp">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FASM Include="bootloader.asm">
