--- a/boot/boot.vcxproj
+++ b/boot/boot.vcxproj
@@ -255,8 +255,7 @@ qemu-system-x86_64 -drive format=raw,file=$(SolutionDir)$(Platform)\$(Configurat
       <LinkTimeCodeGeneration>false</LinkTimeCodeGeneration>
     </Lib>
     <PostBuildEvent>
-      <Command>type $(OutDir)boot.bin &gt; $(OutDir)boot2.bin
-objcopy -O binary $(OutDir)boot.bin $(OutDir)os.bin
+      <Command>objcopy -O binary $(OutDir)boot.bin $(OutDir)os.bin
 align $(OutDir)os.bin 10485760
 qemu-system-x86_64 -display sdl -serial file:$(OutDir)serial.txt -drive format=raw,file="$(OutDir)os.bin",if=ide,index=0,media=disk
 del $(OutDir)$(TargetName)$(TargetExt)</Command>
@@ -281,6 +280,7 @@ del $(OutDir)$(TargetName)$(TargetExt)</Command>
     <ClCompile Include="pci.ixx" />
     <ClCompile Include="PIC.ixx" />
     <ClCompile Include="serial.ixx" />
+    <ClCompile Include="string.ixx" />
     <ClCompile Include="teletype.ixx" />
     <ClCompile Include="types.ixx" />
     <ClCompile Include="vec.ixx" />
@@ -299,7 +299,6 @@ del $(OutDir)$(TargetName)$(TargetExt)</Command>
     <FASM Include="memoryasm.asm" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="cpuid.inc" />
     <None Include="disk.sata.ixx" />
   </ItemGroup>
   <ItemGroup>
