--- a/boot/boot.vcxproj.filters
+++ b/boot/boot.vcxproj.filters
@@ -72,6 +72,12 @@
     <ClCompile Include="string.ixx">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="hash.ixx">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="hash-crc.ixx">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FASM Include="bootloader.asm">
