--- a/boot/boot.vcxproj
+++ b/boot/boot.vcxproj
@@ -271,6 +271,7 @@ del $(OutDir)$(TargetName)$(TargetExt)</Command>
     <ClCompile Include="disk.ixx" />
     <ClCompile Include="GDT.ixx" />
     <ClCompile Include="hash-crc.ixx" />
+    <ClCompile Include="hash-sha.ixx" />
     <ClCompile Include="hash.ixx" />
     <ClCompile Include="IDT.ixx" />
     <ClCompile Include="intrinsic.ixx" />
