--- a/boot/boot.vcxproj
+++ b/boot/boot.vcxproj
@@ -257,7 +257,7 @@ qemu-system-x86_64 -drive format=raw,file=$(SolutionDir)$(Platform)\$(Configurat
     <PostBuildEvent>
       <Command>objcopy -O binary $(OutDir)boot.bin $(OutDir)os.bin
 align $(OutDir)os.bin 10485760
-qemu-system-x86_64 -display sdl -serial file:$(OutDir)serial.txt -drive format=raw,file="$(OutDir)os.bin",if=ide,index=0,media=disk
+qemu-system-x86_64 -display sdl -machine q35 -serial file:$(OutDir)serial.txt -drive format=raw,file="$(OutDir)os.bin",if=ide,index=0,media=disk
 del $(OutDir)$(TargetName)$(TargetExt)</Command>
     </PostBuildEvent>
     <Bscmake>
@@ -265,6 +265,12 @@ del $(OutDir)$(TargetName)$(TargetExt)</Command>
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ACPI.ixx" />
+    <ClCompile Include="driver-ACHI.ixx" />
+    <ClCompile Include="driver-Driver.ixx" />
+    <ClCompile Include="driver.ixx" />
+    <ClCompile Include="pci.structures.ixx" />
+    <ClCompile Include="PIT.ixx" />
     <ClCompile Include="std-compare.ixx" />
     <ClCompile Include="std-concepts.ixx" />
     <ClCompile Include="console.ixx" />
@@ -282,7 +288,7 @@ del $(OutDir)$(TargetName)$(TargetExt)</Command>
     <ClCompile Include="keyboard.ixx" />
     <ClCompile Include="math.ixx" />
     <ClCompile Include="memory-allocator.ixx" />
-    <ClCompile Include="memory-utils.ixx" />
+    <ClCompile Include="memory.utils.ixx" />
     <ClCompile Include="memory.ixx" />
     <ClCompile Include="pci.ixx" />
     <ClCompile Include="PIC.ixx" />
@@ -323,7 +329,9 @@ del $(OutDir)$(TargetName)$(TargetExt)</Command>
     <FASM Include="memoryasm.asm" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="disk.sata.ixx" />
+    <ClCompile Include="disk.sata.ixx">
+      <FileType>Document</FileType>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdarg.h" />
