--- a/boot/boot.vcxproj
+++ b/boot/boot.vcxproj
@@ -271,8 +271,8 @@ del $(OutDir)$(TargetName)$(TargetExt)</Command>
     <ClCompile Include="driver.ixx" />
     <ClCompile Include="pci.structures.ixx" />
     <ClCompile Include="PIT.ixx" />
-    <ClCompile Include="std-compare.ixx" />
-    <ClCompile Include="std-concepts.ixx" />
+    <ClCompile Include="sl.compare.ixx" />
+    <ClCompile Include="sl.concepts.ixx" />
     <ClCompile Include="console.ixx" />
     <ClCompile Include="cpuio.ixx" />
     <ClCompile Include="disk.ixx" />
@@ -293,22 +293,22 @@ del $(OutDir)$(TargetName)$(TargetExt)</Command>
     <ClCompile Include="pci.ixx" />
     <ClCompile Include="PIC.ixx" />
     <ClCompile Include="serial.ixx" />
-    <ClCompile Include="std-allocator.ixx" />
-    <ClCompile Include="std-initializer_list.ixx" />
-    <ClCompile Include="std-iterator.ixx" />
-    <ClCompile Include="std-memory.ixx" />
-    <ClCompile Include="std-numeric_limits.ixx" />
-    <ClCompile Include="std-ratio.ixx" />
-    <ClCompile Include="std-source_location.ixx" />
-    <ClCompile Include="std-span.ixx" />
-    <ClCompile Include="std-type.ixx" />
-    <ClCompile Include="std-utility.ixx" />
-    <ClCompile Include="std-vector.ixx" />
-    <ClCompile Include="std.ixx" />
+    <ClCompile Include="sl.allocator.ixx" />
+    <ClCompile Include="sl.initializer_list.ixx" />
+    <ClCompile Include="sl.iterator.ixx" />
+    <ClCompile Include="sl.memory.ixx" />
+    <ClCompile Include="sl.numeric_limits.ixx" />
+    <ClCompile Include="sl.ratio.ixx" />
+    <ClCompile Include="sl.source_location.ixx" />
+    <ClCompile Include="sl.span.ixx" />
+    <ClCompile Include="sl.type.ixx" />
+    <ClCompile Include="sl.utility.ixx" />
+    <ClCompile Include="sl.vector.ixx" />
+    <ClCompile Include="sl.ixx" />
     <ClCompile Include="string.ixx" />
     <ClCompile Include="teletype.ixx" />
     <ClCompile Include="types.ixx" />
-    <ClCompile Include="std-typetraits.ixx">
+    <ClCompile Include="sl.typetraits.ixx">
       <PreprocessToFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</PreprocessToFile>
       <PreprocessToFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</PreprocessToFile>
     </ClCompile>
